[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Singleplayer.gd" type="Script" id=1]
[ext_resource path="res://Fonts/blocxat.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/BLOXAT.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/xnormal.png" type="Texture" id=4]
[ext_resource path="res://Sprites/xpress.png" type="Texture" id=5]
[ext_resource path="res://Sprites/ynormal.png" type="Texture" id=6]
[ext_resource path="res://Sprites/y2.png" type="Texture" id=7]
[ext_resource path="res://Sprites/backnormal.png" type="Texture" id=8]
[ext_resource path="res://Sprites/backpressed.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="Singleplayer" type="Node2D"]
script = ExtResource( 1 )

[node name="Screen" type="VBoxContainer" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 360.0
margin_bottom = 720.0
alignment = 1

[node name="CDMargin" type="MarginContainer" parent="Screen"]
margin_top = 43.0
margin_right = 360.0
margin_bottom = 233.0
custom_constants/margin_top = 110
custom_constants/margin_bottom = 20

[node name="Countdown" type="Label" parent="Screen/CDMargin"]
margin_top = 110.0
margin_right = 360.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "3"
align = 1
valign = 1
uppercase = true

[node name="Timer" type="Timer" parent="Screen/CDMargin/Countdown"]
wait_time = 0.1

[node name="Soal" type="Label" parent="Screen"]
margin_top = 241.0
margin_right = 360.0
margin_bottom = 301.0
custom_fonts/font = ExtResource( 2 )
text = "YELLOW"
align = 1
valign = 1
uppercase = true

[node name="Scoring" type="Label" parent="Screen"]
margin_top = 309.0
margin_right = 360.0
margin_bottom = 363.0
custom_fonts/font = SubResource( 1 )
text = "Score:
0"
align = 1
valign = 1
uppercase = true

[node name="XY" type="HBoxContainer" parent="Screen"]
margin_top = 371.0
margin_right = 360.0
margin_bottom = 499.0
custom_constants/separation = 10
alignment = 1

[node name="Wrong" type="TextureButton" parent="Screen/XY"]
margin_left = 47.0
margin_right = 175.0
margin_bottom = 128.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )

[node name="Correct" type="TextureButton" parent="Screen/XY"]
margin_left = 185.0
margin_right = 313.0
margin_bottom = 128.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )

[node name="BackMargin" type="MarginContainer" parent="Screen"]
margin_top = 507.0
margin_right = 360.0
margin_bottom = 677.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 150

[node name="Back" type="TextureButton" parent="."]
margin_top = 519.0
margin_right = 360.0
margin_bottom = 619.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
expand = true
stretch_mode = 3

[node name="Timerbg" type="Timer" parent="."]
[connection signal="timeout" from="Screen/CDMargin/Countdown/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Screen/XY/Wrong" to="." method="_on_Wrong_pressed"]
[connection signal="pressed" from="Screen/XY/Correct" to="." method="_on_Correct_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
